app_terminal.py:  Added GO_DIR as a default environment variable that gets set whenever a command is executed.  Should make it easier for terminal applications to figure out where things are in the event they need to reference Gate One stuff. app_terminal.py:  Added GO_SETTINGS_DIR as a default environment variable for the same reasons as above. gateone.js:  Updated GateOne.Utils.getEmDimensions() to include a fix for situations where <pre> elements use 'white-space: pre-wrap' instead of just 'white-space: pre'. terminal.js:  Added some minor tweaks to how terminal sizing is calculated. Terminal Theme CSS:  Changed the terminal class to use pre-wrap (again) so that long lines of text can wrap properly.

--- a/gateone/applications/terminal/templates/themes/dark-black.css
+++ b/gateone/applications/terminal/templates/themes/dark-black.css
@@ -49,7 +49,7 @@
     margin: 0;
     padding: 0;
     border: none;
-    white-space: pre;
+    white-space: pre-wrap;
     word-break: normal;
     word-wrap: normal; /* If this gets set to 'break-word' it might as well be 'break-everything' :) */
     -webkit-transform-origin: left bottom;
